<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:id="@+id/widget49"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <TextView android:id="@+id/type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_text_view" />

    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/type_text_view" />

    <EditText android:id="@+id/name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_edit_text" />

    <EditText android:id="@+id/brand_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/brand_edit_text" />

    <EditText android:id="@+id/model_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/model_edit_text" />

    <EditText android:id="@+id/amount_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/amount_edit_text" />

    <EditText android:id="@+id/price_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/price_edit_text" />

    <EditText android:id="@+id/weight_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/weight_edit_text" />

    <EditText android:id="@+id/code_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/code_edit_text" />

    <Button
        android:id="@+id/selectMarketButton"
        android:layout_width="0dip"
        android:layout_weight="0.5"
        android:padding="0dp"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:layout_marginTop="50dip"
        android:layout_marginBottom="25dip"
        android:text="@string/add_product"
        android:background="@drawable/select_market_button"
        android:onClick="addProduct"
        android:textSize="40sp"/>

</TableLayout>
