<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:id="@+id/widget49"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <TextView android:id="@+id/choose_produict_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/name_spinner"
        android:layout_width="fill_parent"
        android:layout_height="50dp" />

    <Spinner
        android:id="@+id/brand_spinner"
        android:layout_width="fill_parent"
        android:layout_height="50dp" />

    <Spinner
        android:id="@+id/model_spinner"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/type_text_view" />

    <EditText android:id="@+id/amount_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/amount_edit_text" />

    <EditText android:id="@+id/price_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/price_edit_text" />

    <Button
        android:id="@+id/select_product_Button"
        android:layout_width="0dip"
        android:layout_weight="0.5"
        android:padding="0dp"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:layout_marginTop="50dip"
        android:layout_marginBottom="25dip"
        android:text="@string/select_product"
        android:background="@drawable/select_market_button"
        android:onClick="addSelectedProduct"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/add_new_product_tButton"
        android:layout_width="0dip"
        android:layout_weight="0.5"
        android:padding="0dp"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:layout_marginTop="50dip"
        android:layout_marginBottom="25dip"
        android:text="@string/add_product"
        android:background="@drawable/select_market_button"
        android:onClick="addNewProduct"
        android:textSize="20sp"/>
</TableLayout>
